Update USERS backend
